@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-05T01:04:13Z",
-  "count_outdated" : 575,
-  "uniques_outdated" : 401,
+  "timestamp" : "2025-10-11T00:56:11Z",
+  "count_outdated" : 576,
+  "uniques_outdated" : 402,
   "count" : 578,
   "uniques" : 404,
   "clones" : [
-    {
-      "timestamp": "2025-09-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-27T00:00:00Z",
       "count": 1,
